--- a/app/views/grains/_form.html.erb
+++ b/app/views/grains/_form.html.erb
@@ -1,20 +1,20 @@
 <div class='p-3'>
   <nav class='nav' aria-label="Page navigation example">
     <li class="nav-item">
-      <%= link_to("Page", page_path(@grave.page), class: "nav-link") %>
+      <%#= link_to("Page", page_path(@grain.u), class: "nav-link") %>
     </li>
     <li class="nav-item">
-      <%= button_to "Delete", @grave, method: :delete, class: "btn btn-warning nav-link" %>
+      <%= button_to "Delete", @grain, method: :delete, class: "btn btn-warning nav-link" %>
     </li>
 
     <ul class="pagination">
       <li class="page-item"><a
           class="page-link"
-          href="<%= edit_grave_path(Grave.order(:id).where('id < ?', @grave.id).last || @grave.id) %>"
+          href="<%= edit_grain_path(Grain.order(:id).where('id < ?', @grain.id).last || @grain.id) %>"
         >Previous</a></li>
       <li class="page-item"><a
           class="page-link"
-          href="<%= edit_grave_path(Grave.order(:id).where('id > ?', @grave.id).first || @grave.id) %>"
+          href="<%= edit_grain_path(Grain.order(:id).where('id > ?', @grain.id).first || @grain.id) %>"
         >Next</a></li>
     </ul>
   </nav>
@@ -23,7 +23,7 @@
   "GraveEditor",
   {
     image:
-      @grave.page.image.as_json(methods: [:href], only: %i[id width height]),
+      @grain.upload_item.image.as_json(only: %i[id width height]),
     grave:
       @grave.as_json(
         methods: [:type],
@@ -34,6 +34,5 @@
         }
       ),
     sites: Site.all,
-    page: @grave.page
   }
 ) %>
