--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -27,5 +27,5 @@
     <%= form.text_field :lon, class: "form-control" %>
   </div>
 
-  <%= form.submit class: "btn btn-primary" %>
+  <%= form.submit "Save", class: "btn btn-primary" %>
 <% end %>
