--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <!-- Left links -->
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/graves">Graves</a>
+              <%= link_to('Grains', grains_path, class: 'nav-link') %>
             </li>
             <li class="nav-item">
               <%= link_to('Uploads', uploads_path, class: 'nav-link') %>
@@ -54,7 +54,7 @@
               <a class="nav-link" href="/maps">Map</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="<%= new_upload_path %>">Upload Publication</a>
+              <a class="nav-link" href="<%= new_upload_path %>">Upload Photographs</a>
             </li>
           </ul>
           <!-- Left links -->
