--- a/app/views/uploads/new.html.erb
+++ b/app/views/uploads/new.html.erb
@@ -1,9 +1,3 @@
-<h1>New publication</h1>
+<h1>New Upload</h1>
 
 <%= render "form", upload: @upload %>
-
-<br>
-
-<div>
-  <%= link_to "Back to uploads", uploads_path %>
-</div>
