--- a/app/views/grains/index.html.erb
+++ b/app/views/grains/index.html.erb
@@ -1,3 +1,3 @@
-<%= link_to('Export', export_grains_path, class: 'btn btn-success mb-4') %>
+<%#= link_to('Export', export_grains_path, class: 'btn btn-success mb-4') %>
 
-<%= react_component('GrainsList') %>
+<%= react_component('GrainsList', props: { export_grains_path: export_grains_path, export_outlines_grains_path: export_outlines_grains_path }) %>
