--- a/app/views/uploads/_form.html.erb
+++ b/app/views/uploads/_form.html.erb
@@ -1,29 +1,34 @@
 <div class='container'>
   <%= simple_form_for(upload) do |f| %>
 
-    <!-- Drag and Drop Zone for the File -->
-    <div class="file-upload-zone">
-      <%= f.input :zip, as: :file, input_html: { class: 'file-input', style: 'display:none;' } %>
-      <label for="upload_zip" class="dropzone">
-        <p>Drag and drop your file here, or click to select it</p>
-      </label>
-    </div>
+    <% unless upload.persisted? %>
+      <!-- Drag and Drop Zone for the File -->
+      <div class="file-upload-zone">
+        <%= f.input :zip, as: :file, input_html: { class: 'file-input', style: 'display:none;' } %>
+        <label for="upload_zip" class="dropzone">
+          <p>Drag and drop your file here, or click to select it</p>
+        </label>
+      </div>
+    <% end %>
 
-    <%= f.input :name %>
+    <%= f.input :name, required: true %>
 
-    <!-- Species select – must pick one -->
+    <!-- Species select - must pick one -->
     <%= f.input :strain_id,
                 collection: Strain.order(:name).pluck(:name, :id),
                 label:      'Species',
                 prompt:     'Select a species',
                 required:   true %>
 
-    <!-- Site select – must pick one -->
-    <%= f.input :site,
+    <!-- Site select - must pick one -->
+    <%= f.input :site_id,
                 collection: Site.order(:name).pluck(:name, :id),
                 label:      'Site',
                 prompt:     'Select a site',
                 required:   true %>
+
+    <%= f.input :scale_pixels, label: 'Scale Length in Pixels' %>
+    <%= f.input :scale_mm_distance, hint: '1mm = 1000 micrometers', label: 'Scale length in mm', wrapper_html: { class: 'mb-2' } %>
 
     <%= f.submit(class: "btn btn-primary") %>
 
