--- a/app/views/uploads/edit.html.erb
+++ b/app/views/uploads/edit.html.erb
@@ -1,9 +1,3 @@
-<h1>Editing publication</h1>
+<h1>Editing Upload</h1>
 
-<%= render "form", publication: @publication %>
-
-<br>
-
-<div>
-  <%= link_to "Show this upload", @publication %>
-  |</div>
+<%= render "form", upload: @upload %>
