--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -29,7 +29,7 @@
           <%= publication.strain&.name %>
         </td>
         <td>
-
+          <%= link_to 'Edit', edit_upload_path(publication) %>
         </td>
       </tr>
     <% end %>
