--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
               <%= link_to('Grains', grains_path, class: 'nav-link') %>
             </li>
             <li class="nav-item">
-              <%= link_to('Uploads', uploads_path, class: 'nav-link') %>
+              <%= link_to('Datasets', uploads_path, class: 'nav-link') %>
             </li>
             <li class="nav-item">
               <%= link_to('Sites', sites_path, class: 'nav-link') %>
@@ -54,7 +54,7 @@
               <a class="nav-link" href="/maps">Map</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="<%= new_upload_path %>">Upload Photographs</a>
+              <a class="nav-link" href="<%= new_upload_path %>">Upload</a>
             </li>
           </ul>
           <!-- Left links -->
